fix min 768 alignment issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,14 +579,22 @@ line-height: 2rem;
   }
 
   .about-human {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
   }
 
   .post-image {
     width: 100%;
     height: auto;
+    overflow: hidden;
+
+  }
+
+  .post-image img {
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    display: block;
   }
 }
 
